osha.theme Changelog
====================

1.3.23 (unreleased)
-------------------

- added an oshlink short template (pilz).
- Copied faq_view.pt from PHC, to insert plone.belowcontentbody at the bottom.
  This gives us access to the +History link (thomasw)


1.3.22 (2010-06-13)
-------------------

- Since FAQs now have Subcategory, show the Subcat-selector in the practical
  solution search (thomasw)


1.3.21 (2010-06-13)
-------------------

- Adding a method to oshaview so we can get the number of people
  subscribed to the alert service #1330 (deroiste)
- Adding browser view @@publications-list that dynamically lists all
  publication types #728 (reinhardt)
- Fixed link in german network dropdown (pilz)

1.3.20 (2010-06-08)
-------------------

- Reuse existing translation strings #1216 (deroiste)

1.3.19 (2010-06-08)
-------------------

- bugfix: missing tal:attributes from subscribe_mailinglists links
  #1216 (deroiste)

1.3.18 (2010-06-01)
-------------------

- customized simpleattachment widgets to not use the catalog
  [pilz]
- fixed wrong caching in oshcollections portlet. getPath is not cacheable
  [pilz]
- Fixed the oshmacro used for seminars-view, several things were missing
  [thomasw]

1.3.17 (2010-05-26)
-------------------

- Overriding text-only view for documents in Collage for the social media section #1063 (thomasw)
- Re-enabled the commented batching in the teaser-view template, but only for the
  archive view #1245 (thomasw)
- Add new macro for showing the seminars. Display start and end date instead of 
  published and modified (jcbrand)
- Adding two custom portlets for the new right hand column layout #1216 (deroiste)



1.3.16 (2010-05-06)
-------------------

- fixed height fallback in image portlet. Now a flash portlet can be 100% width, fixes #1037 (pilz)
- Created a Publications portlet, requested in #627 - it is identical to the Practical
  Solutions portlet, except that it only shows publications (thomasw)